tests/rosetta/out/Haskell/averages-arithmetic-mean.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/averages-arithmetic-mean.hs:139:1: error:
    Multiple declarations of ‘main’
    Declared at: /workspace/mochi/tests/rosetta/out/Haskell/averages-arithmetic-mean.hs:132:1
                 /workspace/mochi/tests/rosetta/out/Haskell/averages-arithmetic-mean.hs:139:1
    |
139 | main = do
    | ^^^^
